--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "start-ssl": "ng serve --port 4205  --ssl true --ssl-key \"ssl/server.key\" --ssl-cert \"ssl/server.crt\"",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
